# apps.livebox.livebox-edje

./: CMakeLists.txt
include/: abi.h  debug.h  script_port.h
packaging/: libdynamicbox_edje.spec  liblivebox-edje.spec
src/: abi.c  script_port.c
